--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,7 +42,13 @@
     </style>
 
     <style name="Description">
-        <item name="android:fontFamily">serif;</item>
+        <item name="android:fontFamily">serif</item>
+    </style>
+
+    <style name="SubmitButton">
+        <item name="android:background">@color/colorYellow</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:fontFamily">serif</item>
     </style>
 
 </resources>
