Added user sign in capability, fixed home page webview, added sign out capability

--- a/app/src/main/res/layout/app_bar_classes.xml
+++ b/app/src/main/res/layout/app_bar_classes.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/add_icon" />
+        android:src="@drawable/add_icon"
+        android:onClick="addCourse"/>
     <include
         layout="@layout/class_content"/>
 
