--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,13 @@
         <item name="android:fontFamily">serif</item>
     </style>
 
+    <style name="HeaderText">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:fontFamily">serif</item>
+        <item name="android:textSize">34dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:background">@color/colorYellow</item>
+    </style>
+
 </resources>
