--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/colorAccent"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,22 +13,21 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/phoenix_icon"
-        android:layout_weight="0.25"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_weight="0.25"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:src="@drawable/phoenix_icon" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="bELONg"
-        android:textAppearance="@style/SubHeaderText"
-        android:gravity="center_vertical"
-        android:id="@+id/textView"
-        android:layout_weight="0.75"/>
-
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_weight="0.75"
+            android:gravity="center_vertical"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:text="bELONg"
+            android:textAppearance="@style/SubHeaderText" />
 </LinearLayout>
